--- a/README
+++ b/README
@@ -9,12 +9,9 @@
 * All mwEmbed code is Released under the GPL2 as 
 * a stand alone component of mediaWiki
 * 
-* Libraries used include their licence info in their included path 
+* Libraries used should include their licence info in their included path 
 *
 * Copyright (C) 2007 - 2010 Kaltura, Wikimedia Foundation
-* 
-* Sub modules and libraries carry specific copyright while the
-* the entire package is always reasleasable under the GPL 2
 * 
 * Author Michael Dale <mdale@wikimedia.org>,
 * and many others.
