--- a/README
+++ b/README
@@ -1,34 +1,140 @@
-*********************************************** test
-*
-* For an overview of all mwEmbed files see: 
-* http://www.mediawiki.org/wiki/MwEmbed
-* 
-* For stand alone usage see: 
-* http://kaltura.org/project/HTML5_Media_JavaScript_Library
-* 	
-* All mwEmbed code is Released under the GPL2 as 
-* a stand alone component of mediaWiki
-* 
-* Libraries used should include their licence info in their included path 
-*
-* Copyright (C) 2007 - 2010 Kaltura, Wikimedia Foundation
-* 
-* Author Michael Dale <mdale@wikimedia.org>,
-* and many others.
-*
-* This program is free software; you can redistribute it and/or modify
-* it under the terms of the GNU General Public License as published by
-* the Free Software Foundation; either version 2 of the License, or
-* (at your option) any later version.
-*
-* This program is distributed in the hope that it will be useful,
-* but WITHOUT ANY WARRANTY; without even the implied warranty of
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-* GNU General Public License for more details.
-*
-* You should have received a copy of the GNU General Public License along
-* with this program; if not, write to the Free Software Foundation, Inc.,
-* 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-* http://www.gnu.org/copyleft/gpl.html
-*
-*********************************************
+# mwEmbed
+
+This javascript library enables you to take advantage of the [html5 `<video>` and `<audio>` tags](https://developer.mozilla.org/En/Using_audio_and_video_in_FireFox) today with a consistent player interface across all major browsers including Internet Explorer. 
+
+The library supports a seamless fallback with Flash based playback (using Kaltura’s media player – KDP3) or Java Cortado for browsers that don’t yet feature HTML5 video & audio support.  Upon detection of the client browser, the Kaltura HTML5 library chooses the right codec to use (specified in the source attributes) and the right player to display.  So whether you’re using flash, h264, ogg-theora, or WebM – Kaltura’s library will make sure it is played on all browsers with the same html based UI.
+
+While support for HTML5 video is growing, there is large percentage of the web browser market that is presently best served by the Adobe Flash plugin and an associated player. A base component of the Kaltura HTML5 javascript library bridges this gap, by cascading to an underlining Flash player in browsers that do not support the native HTML5 video player. In addition, Kaltura’s player maintains a unified look & feel across formats and browsers. Kalturas platform provides automatic transcoding into all supported formats (OGG, H.264, MOV, FLV etc.)
+
+**Coming soon!** Kaltura’s HTML5 video player will soon support all advanced video management capabilities, including analytics and monetization, making it commercially viable on devices, such as the Apple iPhone, that do not support Flash.
+
+## The jQuery of HTML5 media
+
+* __mwEmbed__ is built on [jQuery](http://jquery.com/) and [jQueryUI](http://jqueryui.com/) so it's easy to theme, customize and extend.
+
+* supports the royalty free, patent unencumbered open media formats [ogg theora/vorbis](http://xiph.org/).
+> This enables websites to distribute video without [future content distribution costs](http://mpegla.com/news/n_03-11-17_avc.html) associated with the h.264 codec. With theora sporting [similar qualities](http://people.xiph.org/%7Egreg/video/ytcompare/comparison.html) at web bitrates its a win win to start adoption ogg!
+>
+>If your already distributing h.264 formats, __mwEmbed__ supports a smooth transition with fallback to h.264 sources with the same html/css interface player skin as the ogg content.
+* supports emerging subtitles and timed text formats for future prof accessibility.
+* includes an easy to integrate free license asset search system for grabbing free content from repositories such as the [Internet Archive](http://www.archive.org/index.php), [Wikimedia Commons](http://commons.wikimedia.org/wiki/Main_Page), and [Flickr](http://www.flickr.com/). This lets you integrate quick access to freely reusable illustrative image or short web clip for your web app.
+* includes components for flexible client side transcoding of assets via the [Firefogg](http://firefogg.org/) browser extension.
+> Firefogg integration lets video sites avoid intermediary transcode formats for user contributed media, distribute transcode costs, and lets the website provide specific transcoding settings directly to the client at the point of upload.
+
+## Getting stated with the library
+
+Using __mwEmbed__ in your own applications is as simple as adding a script include of the library javascript `http://html5.kaltura.org/js` and then using the normal html5 video tag. ie `<video src="myOgg.ogg">`
+
+
+### Putting it all together your embed page should look something like this:
+
+    <!DOCTYPE html>
+    <html>
+    <head>
+      <script type="text/javascript" src="http://html5.kaltura.org/js" > </script> 
+    </head>
+    <body>
+      <video id="video" style="width:544px;height:304px;" 
+ 		    poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
+ 		    duration="10:53" 
+ 		    linkback="http://www.elephantsdream.org/" > 		
+	      <source type="video/ogg" src="http://ia311040.us.archive.org/3/items/ElephantsDream/ed_1024.ogv" >
+	      <source type="video/h264" src="http://ia311040.us.archive.org/3/items/ElephantsDream/ed_hd_512kb.mp4" >
+	
+		    <!--  Subtitles -->
+	
+        <track kind="subtitles" id="video_af" srclang="af" 
+             src="media/elephants_dream/elephant.afrikaans.srt"></track>
+        <track kind="subtitles" id="video_en" srclang="en"  
+             src="media/elephants_dream/elephant.english.srt"></track> 
+      </video>
+    </body>
+    </html>
+
+* For best compatibility: we include the poster, durationHint, width and height attributes. This way browsers such as IE can display the player interface with poster image at the correct resolution with a duration in the user interface.
+* If you would like to support html5 with h.264 ( safari, IE9, google chrome) and support a flash fallback for older versions of IE you include an h.264 source. For best compatibility your mp4 source should ideally use a h.264 profile compatible with mobile devices such as the iPhone.  <a href="http://corp.kaltura.com/">Kaltura hosted Solutions</a> include iPhone support. Desktop video encoding software such as <a href="http://handbrake.fr/">handbreak</a> also includes iPhone profiles. 
+* If you would like to change the theme you can change the class attribute `<video class="kskin">` more info about custom theming is on the way. 
+
+## Library features and showcase
+* __Cross browser & Format compatibility__ \[see live demo: <a title="HTML5 Video Player with jQueryUI theme support" href="http://www.kaltura.org/apis/html5lib/kplayer-examples/Player_Fallback.html" rel="lightframe[|width:550px; height:650px; scrolling: auto;]">Video Player</a>, <a title="HTML5 Audio Player with jQueryUI theme support" href="http://www.kaltura.org/apis/html5lib/mwEmbed/tests/Player_Audio.html" rel="lightframe[|width:500px; height:500px; scrolling: auto;]">Audio Player</a>\] - Will work on all major browsers, and with any online supported video format. Gracefully identifys the best playback engine (Native HTML5, Flash, VLC or Java Cortado) for your settings and video format.
+* __Easy to skin__ \[<a title="HTML5 Video Player with jQueryUI theme support" target="_blank" href="http://www.kaltura.org/apis/html5lib/kplayer-examples/Player_Themable.html">see live demo</a>\] - Based on HTML, CSS and jQuery, skinning is amazingly easy and flexible. No need external or compiled resources (like Flash), or complicated development environments. Skin and Theme will be consistent through all UI and playback engines. Built in support for for the jquery Theme Roller for easy theming.
+* __Easy to Extend, Javascript modules__ - Quick, clean and easy way of extending. Write once and the code will be compatible with all browsers and all playback engines. 
+* __Javascript libraries for web applications__ that allow much more then simple playback. Create a full featured web-video experience - <a title="HTML5 with jQueryUI content ingestion wizard" href="http://www.kaltura.org/apis/html5lib/kplayer-examples/Add_Media_Wizard.html" rel="lightframe[|width:850px; height:500px; scrolling: auto;]">Import and upload wizard</a>, <a title="HTML5 with jQueryUI online video editor" href="http://www.kaltura.org/apis/html5lib/mwEmbed/tests/Sequence_Editor.html" rel="lightframe[|width:900px; height:700px; scrolling: auto;]">Video Editor</a> ( not fully functional in stand alone mode yet ), <a title="FireOgg integration - Client Side Transcoding" href="http://www.kaltura.org/apis/html5lib/mwEmbed/example_usage/Firefogg_Make_Advanced.html" rel="lightframe[|width:550px; height:650px; scrolling: auto;]">Client Side Encoding (FireOgg)</a>.
+* __Easy to integrate__ - Integrate to any existing web CMS, pre-integrated into Media Wiki (powering Wikipedia, MetaVid).
+* Integrated into Kaltura Video Platform based on the Kaltura JS Client library (Coming soon...)
+
+## Background
+
+This project started as a part of the MediaWiki HTML5 media functionality project. 
+
+__mwEmbed__ provides the basis for other MediaWiki media functionality. For more info see <a href="http://www.mediawiki.org/wiki/Media_Projects_Overview">the projects overview on MediaWiki</a> and the associated integration (currently called <a href="http://www.mediawiki.org/wiki/JS2_Overview">js2</a>) 
+
+## More...
+
+There are many other options (like thumbnail, poster, size, inline transcript display etc.) provided with this library. 
+
+The general goal of this project is to fully support the html5 video spec and provide a rich interface for creating online rich-media experiences based on html5 video and audio.
+
+This site, [metavid.org](http://metavid.org/), makes heavy use of the library.  Remote embedding of metavid content also uses the library. 
+If your site uses this library, please let us know and share your experience, feature requests and bugs on the bug tracker and forums.
+
+## HTML5 `<video>` MIME type>
+
+Note that if the MIME types for Theora video are not set on the server, the video may not show or show a gray box containing an X (if JavaScript is enabled).
+
+You can fix this problem for the Apache Web Server by adding the extension used by Theora video files (".ogm", ".ogv", or ".ogg" are the common types) to the MIME type "video/ogg" via the "mime.types" file:
+
+* Edit the mime.types apache configuration file (in "/etc/apache" on linux, "\xampp\apache\conf\mime.types" on windows-xampp)
+* Search for `application/ogg     ogg` (if not exist skip this step), delete this line
+* Add the following: `video/ogg     ogg ogm ogv`
+* Restart apache
+
+Or  by adding the "AddType" configuration directive in httpd.conf - 
+
+    AddType video/ogg .ogm
+    AddType video/ogg .ogv
+    AddType video/ogg .ogg
+
+Your web host may provide an easy interface to MIME type configuration changes for new technologies until a global update naturally occurs.
+
+## Get Project Source Code
+
+<p class="note">MwEmbed is released under the GPL2 and hosted by the wikimedia foundation.<br />
+You may check out a read-only working copy anonymously over HTTP:<br />
+<span style="padding: 3px 0px 0px 30px; color:#555555;font-weight: bold;">svn checkout <a href="http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed/" title="Kaltura Project Code - HTML5 and JS Media Library" target="_blank">http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed/</a></span>
+<span style="padding: 0px 0px 5px 0px; color:#885555;">If you'd like commit access, please submit a request to <a href="../join-project?lightframe" rel="lightframe[|width:570px; height:650px; scrolling: auto;]">join this project.</a>.</span>
+</p>
+
+For an overview of all mwEmbed files see: 
+http://www.mediawiki.org/wiki/MwEmbed
+
+For stand alone usage see: 
+http://kaltura.org/project/HTML5_Media_JavaScript_Library
+
+All mwEmbed code is Released under the GPL2 as 
+a stand alone component of mediaWiki
+
+Libraries used include their license info in their included path 
+
+Copyright (C) 2007 - 2010 Kaltura, Wikimedia Foundation
+
+Sub modules and libraries carry specific copyright while the
+the entire package is always releasable under the GPL 2
+
+Author Michael Dale <mdale@wikimedia.org>,
+and many others.
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along
+with this program; if not, write to the Free Software Foundation, Inc.,
+59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+http://www.gnu.org/copyleft/gpl.html
