--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-h1. mwEmbed Integrators Guide
-
 p. This javascript library enables you to take advantage of the "html5 @<video>@ and @<audio>@ tags":https://developer.mozilla.org/En/Using_audio_and_video_in_FireFox today with a consistent player interface across all major browsers including Internet Explorer.
 
 p. The library supports a seamless fallback with Flash based playback (using Kaltura's media player -- KDP3) or Java Cortado for browsers that don't yet feature HTML5 video & audio support.  Upon detection of the client browser, the Kaltura HTML5 library chooses the right codec to use (specified in the source attributes) and the right player to display.  So whether you're using flash, h264, ogg-theora, or WebM -- Kaltura's library will make sure it is played on all browsers with the same html based UI.
@@ -10,7 +8,7 @@ p. *Coming soon!* Kalturas' HTML5 video player will soon support all advanced vi
 
 h2. Basic Usage
 
-p. Using *mwEmbed* in your own applications is as simple as adding a script include of the library javascript, @http://html5.kaltura.org/js@ and then using the normal html5 video tag, ie @<video src="myOgg.ogg">@ .
+p. Using *Kaltura's HTML5 video library* in your own applications is as simple as adding a script include of the library javascript, @http://html5.kaltura.org/js@ and then using the normal html5 video tag, ie @<video src="myOgg.ogg">@ .
 
 p. Putting it all together your embed page should look something like this:
 
@@ -40,7 +38,7 @@ bc. <!DOCTYPE html>
 
 h2. Fall Forward from Flash to html5 for iPhone & iPad Support
 
-p. *mwEmbed* may be installed in conjunction with existing Kaltura integrations to provide fall forward from flash to html5 to enable video embedding for iPhone and iPad.
+p. *Kaltura's HTML5 Video Library* may be installed in conjunction with existing flash video integrations to provide fall forward from flash to html5 to enable video embedding for iPhone and iPad.
 
 p. Installing html5 support to an existing Kaltura integration is as simple as adding a javascript tag to include @http://html5.kaltura.org/js@.  The library will automatically replace your Flash embed with an html5 @<video>@ element on browsers capable of parsing the tag.
 
@@ -69,12 +67,12 @@ bc. <!DOCTYPE html>
 
 h2. Library features and showcase
 
-* *mwEmbed* is built on "jQuery":http://jquery.com/ and "jQueryUI":http://jqueryui.com/ so it's easy to theme, customize and extend.
+* *Kaltura's HTML5 Video Library* is built on "jQuery":http://jquery.com/ and "jQueryUI":http://jqueryui.com/ so it's easy to theme, customize and extend.
 * supports the *royalty free*, patent unencumbered *open media* formats "ogg theora/vorbis":http://xiph.org/ .
 
 bq. This enables websites to distribute video without "future content distribution costs":http://mpegla.com/news/n_03-11-17_avc.html associated with the h.264 codec.
 
-bq. If your already distributing h.264 formats, *mwEmbed* supports a smooth transition with fallback to h.264 sources with the same html/css interface player skin as the ogg content.
+bq. If your already distributing h.264 formats, *Kaltura's HTML5 Video Library* supports a smooth transition with fallback to h.264 sources with the same html/css interface player skin as the ogg content.
 
 * supports emerging *subtitles and timed text* formats for future proof accessibility.
 * includes an easy to integrate free license *asset search system* for grabbing free content from repositories such as the "Internet Archive":http://www.archive.org/index.php, "Wikimedia Commons":http://commons.wikimedia.org/wiki/Main_Page , and "Flickr":http://www.flickr.com/ . This lets you integrate quick access to freely reusable illustrative image or short web clip for your web app.
@@ -90,9 +88,11 @@ bq. Firefogg integration lets video sites avoid intermediary transcode formats f
 
 h2. Troubleshooting
 
-h3. Kaltura Specific Setup
+h3. Video Codecs
 
-p. In order to use the full functionality of this library you should obtain a trial account with "Kaltura":http://corp.kaltura.com/ and request a support technician setup your account to provide html5 flavored video codecs.
+p. You will need to encode your video files into multiple codec formats to provide video for device platforms like iPhone, iPad, Android, and Blackberry.  "Dive into HTML5":http://diveintohtml5.org/video.html#firefogg provides an excellent reference for encoding these multiple video formats with "Firefogg":http://firefogg.org/ , FFmpeg, and Handbrake.
+
+p. If you would prefer to not have to deal with encoding your videos into multiple formats, you should obtain a trial account with "Kaltura":http://corp.kaltura.com/ and request a support technician setup your account to provide html5 flavored video codecs.
 
 h3. HTML5 @<video>@ MIME type
 
@@ -115,7 +115,7 @@ p. Your web host may provide an easy interface to MIME type configuration change
 
 h2. Background
 
-p. This project started as a part of the MediaWiki HTML5 media functionality project. 
+p. This project started as a part of the MediaWiki HTML5 media functionality project.  mwEmbed is another name by which Kaltura's HTML5 Video Library provides is known at Wikimedia, where it provides Wikipedia's upcoming video editing functionality.
 
 p. *mwEmbed* provides the basis for other MediaWiki media functionality. For more info see <a href="http://www.mediawiki.org/wiki/Media_Projects_Overview">the projects overview on MediaWiki</a> and the associated integration (currently called <a href="http://www.mediawiki.org/wiki/JS2_Overview">js2</a>) 
 
