* added mime type for webM and mp4 troubleshooting
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@704 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/README
+++ b/README
@@ -110,6 +110,8 @@ p. Or by adding the "AddType" configuration directive in httpd.conf -
 bc. AddType video/ogg .ogm
 AddType video/ogg .ogv
 AddType video/ogg .ogg
+AddType video/mp4 .mp4
+AddType video/webm .webm
 
 p. Your web host may provide an easy interface to MIME type configuration changes for new technologies until a global update naturally occurs.
 
