--- a/modules/KalturaSupport/tests/externalResources/README
+++ b/modules/KalturaSupport/tests/externalResources/README
@@ -1,1 +1,1 @@
-Some simple JavaScript files associated with the External Resources test file
+Some simple JavaScript and css files associated with the External Resources test file
